# GearMesh

./: .gitignore  .prototools  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  moon.yml  package.json
.agent/workflows/: pull-request-review-agent.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aeneas-ci.yaml  release.yaml  rust-ci.yaml
.husky/: pre-commit
.moon/: toolchain.yml  workspace.yml
crates/gear-mesh/: Cargo.toml  README.md  moon.yml
crates/gear-mesh-cli/: Cargo.toml  moon.yml
crates/gear-mesh-cli/src/: config.rs  config_tests.rs  generate.rs  main.rs  watch.rs
crates/gear-mesh-core/: Cargo.toml  README.md  moon.yml
crates/gear-mesh-core/src/: docs.rs  docs_tests.rs  lib.rs  plugin.rs  type_utils.rs  types.rs  validation.rs
crates/gear-mesh-derive/: Cargo.toml  README.md  moon.yml
crates/gear-mesh-derive/src/: attributes.rs  error.rs  lib.rs  parser.rs
crates/gear-mesh-generator/: Cargo.toml  README.md  moon.yml
crates/gear-mesh-generator/src/: branded.rs  lib.rs  module_organizer.rs  tests.rs  typescript.rs  utils.rs  validation_gen.rs  validation_gen.rs.orig
crates/gear-mesh-generator/tests/: property_tests.rs
crates/gear-mesh-generator/tests/snapshots/: branded_type.snap  enum_with_data.snap  generic_type.snap  result_tagged_union.snap  simple_struct.snap  validation_and_zod.snap
crates/gear-mesh/examples/: basic.rs
crates/gear-mesh/src/: cache.rs  export_macro.rs  inventory_collect.rs  lib.rs  migration.rs  output_registry.rs  type_deps.rs
crates/gear-mesh/tests/: codegen_test.rs  integration_test.rs  validation_collection_test.rs
docs/: ARCHITECTURE.md  CODEGEN_TESTS.md  E2E_TEST_RESULTS.md  FUTURE_ISSUES.md  IMPLEMENTATION_STATUS.md  MOONREPO.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  PUBLISHING.md  RELEASE_NOTES_v0.1.0.md  TESTING.md
examples/axum-react/: README.md  build.sh
examples/axum-react/backend/: Cargo.toml  gear-mesh.toml
examples/axum-react/backend/src/: main.rs
examples/axum-react/frontend/src/: App.css  App.tsx
examples/axum-react/frontend/src/types/: CreateUserRequest.ts  CreateUserResponse.ts  ErrorResponse.ts  User.ts  UserId.ts  UserList.ts  generated.ts  index.ts  types.ts
examples/simple-bigint/: Cargo.toml  generated.ts
examples/simple-bigint/src/: main.rs
tests/aeneas-smoke/: Cargo.toml
tests/aeneas-smoke/src/: lib.rs
tests/e2e/: Dockerfile.test  run-docker-test.sh  test-e2e-simple.sh  test-e2e.sh
