[package]
name = "gear-mesh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and intermediate representation for gear-mesh"
readme = "README.md"
homepage = "https://github.com/UtakataKyosui/GearMesh"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
