[package]
name = "gear-mesh-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive macros for gear-mesh"

[lib]
proc-macro = true

[dependencies]
gear-mesh-core = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
