[package]
name = "gear-mesh-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive macros for gear-mesh"
readme = "README.md"
homepage = "https://github.com/UtakataKyosui/GearMesh"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
gear-mesh-core = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde_json = { workspace = true }
