[package]
name = "gear-mesh-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TypeScript code generator for gear-mesh"
readme = "README.md"
homepage = "https://github.com/UtakataKyosui/GearMesh"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gear-mesh-core = { workspace = true }
gear-mesh-derive = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
