[package]
name = "gear-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
gear-mesh-core = { workspace = true }
gear-mesh-derive = { workspace = true }
gear-mesh-generator = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
