[package]
name = "simple-bigint"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gear-mesh = { path = "../../crates/gear-mesh" }
gear-mesh-core = { path = "../../crates/gear-mesh-core" }
gear-mesh-derive = { path = "../../crates/gear-mesh-derive" }
gear-mesh-generator = { path = "../../crates/gear-mesh-generator" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
